aws-poc/iac/overlays/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  name: demo-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: "2048"      
        image: alexwhen/docker-2048
