aws-poc/iac/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-ingress
spec:
  rules:
  - host: user-service.webdemoapp.com
    http:
      paths:
      - backend:
          service:
            name: user-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: configure-service.webdemoapp.com
    http:
      paths:
      - backend:
          service:
            name: configure-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: financial-service.webdemoapp.com
    http:
      paths:
      - backend:
          service:
            name: financial-service
            port:
              number: 80
        path: /
        pathType: Prefix            
  tls:
  - hosts:
    - user-service.webdemoapp.com
    - configure-service.webdemoapp.com
    - financial-service.webdemoapp.com
